# CRISP

./: .gitignore  CONTRIBUTING.md  LICENSE  MAINTAINERS  README.md
code/: CMakeLists.txt  crisp.cpp  crisp.hpp  distribution.cpp  distribution.hpp  factor.cpp  factor.hpp  gibbs.cpp  gibbs.hpp  lbp.cpp  lbp.hpp  main.cpp  node.cpp  node.hpp  python.cpp  seir.cpp  seir.hpp  test_gibbs_sampler.py
code/experiments/exp_5.1/: exp51.py  exp51_lbp.py
code/experiments/exp_5.2/: Makefile  analyse_results.ipynb  exp_test_quarantine.py
